[gd_scene load_steps=3 format=3 uid="uid://db1v5r22fkqey"]

[ext_resource type="Texture2D" uid="uid://brbwgupq832jq" path="res://scenes/all-scenes-assets/tablon_de_madera.png" id="1_4c7m4"]
[ext_resource type="Script" uid="uid://baave6th5317l" path="res://scenes/game/TeamScoreLabels.gd" id="1_8cv70"]

[node name="TeamScoreLabels" type="Node2D"]
script = ExtResource("1_8cv70")

[node name="TablonDeMadera" type="Sprite2D" parent="."]
position = Vector2(226.5, 88)
scale = Vector2(0.261068, 0.240234)
texture = ExtResource("1_4c7m4")

[node name="Control" type="Control" parent="."]
layout_mode = 3
anchors_preset = 0
offset_left = 103.0
offset_top = 47.0
offset_right = 103.0
offset_bottom = 47.0

[node name="HBoxContainer" type="HBoxContainer" parent="Control"]
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="FirstColumn" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="TeamsLabel" type="Label" parent="Control/HBoxContainer/FirstColumn"]
layout_mode = 2
text = "Teams "

[node name="Team1Label" type="Label" parent="Control/HBoxContainer/FirstColumn"]
layout_mode = 2
text = "Team1"

[node name="Team2Label" type="Label" parent="Control/HBoxContainer/FirstColumn"]
layout_mode = 2
text = "Team2"

[node name="SecondColumn" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="Chicos" type="Label" parent="Control/HBoxContainer/SecondColumn"]
layout_mode = 2
text = "Chicos "

[node name="Team1Chicos" type="Label" parent="Control/HBoxContainer/SecondColumn"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Team2Chicos" type="Label" parent="Control/HBoxContainer/SecondColumn"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="ThirdColumn" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="Piedras" type="Label" parent="Control/HBoxContainer/ThirdColumn"]
layout_mode = 2
text = "Piedras "
horizontal_alignment = 1

[node name="Team1Piedras" type="Label" parent="Control/HBoxContainer/ThirdColumn"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Team2Piedras" type="Label" parent="Control/HBoxContainer/ThirdColumn"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="FourthColumn" type="VBoxContainer" parent="Control/HBoxContainer"]
layout_mode = 2

[node name="Ronda" type="Label" parent="Control/HBoxContainer/FourthColumn"]
layout_mode = 2
text = "Rondas"
horizontal_alignment = 1

[node name="Team1Rondas" type="Label" parent="Control/HBoxContainer/FourthColumn"]
layout_mode = 2
text = "0"
horizontal_alignment = 1

[node name="Team2Rondas" type="Label" parent="Control/HBoxContainer/FourthColumn"]
layout_mode = 2
text = "0"
horizontal_alignment = 1
